--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,12 @@
 /*Nav Bar*/
 .navbar{
   height: 100px;
-  color: #fff !important;
   
 }
 .navbar-collapse{
   margin-top: 2%;
   color: #fff !important;
-  
+  background-color: rgba (0, 0, 0, 0) !important;
   font-size: 1.5rem;
   line-height: 1.5;
   font-style: normal;
