added slide show for the images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,9 @@ a {
 }
 
 .carousel-indicators{
-  margin-bottom: 75px;
+  /*margin-bottom: 75px;*/
+  /*bottom: -66px !important;*/
+  bottom: 5px  !important;
 }
 
 /*Modal*/
