--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,7 +327,8 @@ a {
   margin-bottom: 2%;
   border-style: solid;
   border-width: 2px;
-  width: 35%;
+  width: 500px;
+  height: 280px;
 }
 
 .fitness-box{
