--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1249,6 +1249,7 @@ footer{
 .venueText{
   margin-left: 63px;
   margin-right: 63px;
+  margin-bottom: 20px;
 }
 
 .heading1{
@@ -1281,26 +1282,28 @@ position: relative;
     top: 36px;
 }
     }
-    .event-list {
+
+.event-list {
     list-style: none;
     font-family: 'Lato', sans-serif;
     margin: 0px;
     padding: 0px;
     position: relative;
     left: -10% !important;
-  }
-  .event-list > li {
-    background-color: rgb(255, 255, 255);
+}
+.event-list > li {
+    background-color: rgba(255, 255, 255,0);
     box-shadow: 0px 0px 5px rgb(51, 51, 51);
     box-shadow: 0px 0px 5px rgba(51, 51, 51, 0.7);
-    padding: 0px;
+    padding: 20px;
     margin: 0px 0px 20px;
     width: 119%!important ;
-  }
+    overflow: auto;
+}
   .event-list > li > time {
     display: inline-block;
     width: 100%;
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255);
     background-color: rgb(197, 44, 102);
     padding: 5px;
     text-align: center;
@@ -1330,6 +1333,7 @@ position: relative;
   .event-list > li > .info {
     padding-top: 5px;
     text-align: center;
+    overflow: auto;
   }
   .event-list > li > .info > .title {
     font-size: 17pt;
@@ -1342,6 +1346,7 @@ position: relative;
     font-size: 13pt;
     font-weight: 300;
     margin: 0px;
+    overflow: auto;
   }
   .event-list > li > .info > ul,
   .event-list > li > .social > ul {
@@ -1381,6 +1386,12 @@ position: relative;
     color: rgb(30, 30, 30);
     background-color: rgb(200, 200, 200);
   }
+
+.imgTestimonial{
+    height: 80%;
+    margin: 4px;
+
+}
   .facebook a,
   .twitter a,
   .google-plus a {
@@ -1426,7 +1437,7 @@ position: relative;
     }
     .event-list > li > .info {
       background-color: rgb(245, 245, 245);
-      overflow: hidden;
+      overflow: auto;
     }
     .event-list > li > time,
     .event-list > li > img {
